--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">EduFun</string>
     <string name="halo_sahabat_edufun">Halo, Sahabat EduFun!</string>
     <string name="selamat_datang">Selamat datang di EduFun! Mari kita mulai petualangan pengetahuan kamu dan temukan cara baru untuk belajar dengan cara yang interaktif dan seru. Siap untuk memulai? Ayo kita mulai!</string>
+    <string name="desc_home">Today is a great day to learn something new</string>
+    <string name="hi_user_home">Hi, User!</string>
+    <string name="image">Image</string>
 </resources>
