--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="category">Mata Pelajaran</string>
     <string name="welcome">Selamat datang,</string>
     <string name="quiz_not_found">Tidak ada kuis tersedia untuk bab ini</string>
+    <string name="history_not_found">Tidak ada riwayat</string>
 </resources>
