--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="welcome">Selamat datang,</string>
     <string name="quiz_not_found">Tidak ada kuis tersedia untuk bab ini</string>
     <string name="history_not_found">Tidak ada riwayat</string>
+    <string name="send_notif">Send Notif</string>
+    <string name="notification_title">EduFun</string>
+    <string name="notification_message">Mari belajar bersama</string>
+    <string name="notification_subtext">Reminder</string>
 </resources>
